corrected Overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@ span.card-title#question_text {
     padding-bottom: 5px;
 }
 
-.card {
+.card #question_text {
     word-wrap: break-word;
 }
 
